--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <footer>
                 <ul>
                     <li><a href="#"><img alt="" src="imgs/brand/twitter.png"></a></li>
-                    <li><a href="#"><img alt="" src="imgs/brand/instagram.png"></a></li>
+                    <li><a href="https://www.instagram.com/psyclebr/" target="_blank"><img alt="" src="imgs/brand/instagram.png"></a></li>
                     <li><a href="#"><img alt="" src="imgs/brand/facebook.png"></a></li>
                 </ul>
 
