--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="main">
             <div id="video">
                 <div class="mask"></div>
-                <video autoplay="" id="video-welcome" poster="" loop="">
+                <video id="video-welcome" autoplay loop muted playsinline>
                     <source src="imgs/video-low.mp4" type="video/mp4">
                 </video>
             </div>
