--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
                 <div class="mask"></div>
                 <video id="video-welcome" autoplay loop muted playsinline>
                     <source src="imgs/video-low.mp4" type="video/mp4">
+                    <source src="imgs/video-low.webm" type="video/webm">
+                    <source src="imgs/video-low.ogv" type="video/ogg">
                 </video>
             </div>
             <header>
