--- a/index.html
+++ b/index.html
@@ -41,19 +41,23 @@
                     <div class="text-box">
                         <img alt="Logo Letters" src="imgs/logo-letter.svg">
                         <div class="text-wrap">
-                            <p>Bem vindo,<br>
-                                site em construção.
+                            <p>Bem-vindo(a), aqui você vai encontrar informações sobre como é possível trabalhar a saúde mental aliada aos benefícios da prática de ciclismo, mais especificamente o mountain bike: Psicloterapia. 
                             </p>
+                            <p>O conceito foi desenvolvido pelo Dr. Luís Altenfelder e vem da ideia de terapia da bike , em inglês : psycletherapy: uso da bicicleta como forma de reabilitação. 
+                            </p>
+                            <div class="social">
+                                <p>Siga nossas redes para saber mais.</p>
+                                <ul>
+                                    <li><a href="#"><img alt="" src="imgs/brand/twitter.png"></a></li>
+                                    <li><a href="https://www.instagram.com/psyclebr/" target="_blank"><img alt="" src="imgs/brand/instagram.png"></a></li>
+                                    <li><a href="#"><img alt="" src="imgs/brand/facebook.png"></a></li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
             <footer>
-                <ul>
-                    <li><a href="#"><img alt="" src="imgs/brand/twitter.png"></a></li>
-                    <li><a href="https://www.instagram.com/psyclebr/" target="_blank"><img alt="" src="imgs/brand/instagram.png"></a></li>
-                    <li><a href="#"><img alt="" src="imgs/brand/facebook.png"></a></li>
-                </ul>
 
                 <p class="copy">© 2021</p>
             </footer>
