--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                             <div class="social">
                                 <p>Siga nossas redes para saber mais.</p>
                                 <ul>
-                                    <li><a href="#"><img alt="" src="imgs/brand/twitter.png"></a></li>
+                                    <!--<li><a href="#"><img alt="" src="imgs/brand/twitter.png"></a></li>-->
                                     <li><a href="https://www.instagram.com/psyclebr/" target="_blank"><img alt="" src="imgs/brand/instagram.png"></a></li>
-                                    <li><a href="#"><img alt="" src="imgs/brand/facebook.png"></a></li>
+                                    <!--<li><a href="#"><img alt="" src="imgs/brand/facebook.png"></a></li>-->
                                 </ul>
                             </div>
                         </div>
